--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "toutiao",
   "version": "1.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "build": "vite build"
   },
