--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "assets/icon.png"
+    "default_icon": "assets/icon-128x128.png"
   },
   "content_scripts": [
     {
